[tool.poetry]
name = "repl_python3_discodancer-2"
version = "0.1.0"
description = ""
authors = ["MaximJeleznii <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
lavalink = "^3.1.4"
replit = "^3.2.4"
discord-components = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
